--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,16 @@
     <string name="refresh" translatable="false">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="pref_units_imperial">Imperial</string>
+    <string name="pref_units_metric">Metric</string>
+    <string name="action_map">Map Location</string>
+    <string name="action_share">Share</string>
+    <string name="pref_units_key">temp</string>
+    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
+    <string name="pref_location_key" translatable="false">location</string>
+
+    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
+    <string name="pref_location_default" translatable="false">94043</string>
     <string-array name="temp_types">
         <item>Metric</item>
         <item>Imperial</item>
